--- a/Shop_ProjForWeb/appsettings.json
+++ b/Shop_ProjForWeb/appsettings.json
@@ -2,6 +2,22 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SupermarketDb;Trusted_Connection=true;TrustServerCertificate=true;"
   },
+  "Jwt": {
+    "Key": "ReplaceThisWithASecureKey_ForDevOnly_ChangeInProd",
+    "Issuer": "ShopProjIssuer",
+    "Audience": "ShopProjAudience",
+    "ExpireMinutes": 60
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": { "path": "Logs/log-.txt", "rollingInterval": "Day", "outputTemplate": "%Timestamp% [%Level%] %Message% %NewLine% %Exception%" }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
